--- a/toviewprojects.html
+++ b/toviewprojects.html
@@ -15,9 +15,9 @@
             <li> <a href="Day 5 Calculator/first.html">Day 5</a></li>
             <li> <a  href="Day 6/first.html">Day 6</a></li>
             <li><a  href="Day 7 and 8/first.html">Day 7 & 8</a></li>
-            <li> <a href="Devnest front page/first.html">Day 8(100 Days of CSS Challenge)</a></li>
             <li><a  href="Day 9/index.html">Day 9</a></li>
             <li> <a href="Devnest front page/first.html">Devnest Front Page</a></li>
         </ul>
+        Hello!!
     </body>
 </html>
