--- a/toviewprojects.html
+++ b/toviewprojects.html
@@ -16,7 +16,7 @@
             <li> <a  href="Day 6/first.html">Day 6</a></li>
             <li><a  href="Day 7 and 8/first.html">Day 7 & 8</a></li>
               <li><a  href="100 Days of CSS/index.html">100 Days of CSS-Day 8</a></li>
-            <li><a  href="">Day 9</a></li>
+            <li><a  href="Day 9/index.html">Day 9</a></li>
             <li> <a href="Devnest front page/first.html">Devnest Front Page</a></li>
         </ul>
     </body>
