--- a/Day 10(Memory Game)/index.html
+++ b/Day 10(Memory Game)/index.html
@@ -1,13 +1,69 @@
-<html>
-    <head>
-        <title>
-            Memory Game
-        </title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="score">Score:</div>
-        <div id="container"></div>
-    </body>
-    <script src="script.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+
+  <title>Memory Game</title>
+
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <section class="memory-game">
+    <div class="memory-card" >
+      <img class="front-face" src="photos\question mark.jpg"  />
+      <img class="back-face" src="photos\question mark.jpg" />
+    </div>
+    <div class="memory-card">
+      <img class="front-face" src="photos\question mark.jpg" />
+      <img class="back-face" src="photos\question mark.jpg"  />
+    </div>
+
+    <div class="memory-card" data-framework="vue">
+      <img class="front-face" src="photos\rm.jpg"  />
+      <img class="back-face" src="photos\question mark.jpg"  />
+    </div>
+    <div class="memory-card" data-framework="vue">
+      <img class="front-face" src="photos\rm.jpg"  />
+      <img class="back-face" src="photos\question mark.jpg"/>
+    </div>
+
+    <div class="memory-card" data-framework="angular">
+      <img class="front-face" src="photos\lee jong gi.jpg"  />
+      <img class="back-face" src="photos\question mark.jpg"  />
+    </div>
+    <div class="memory-card" data-framework="angular">
+      <img class="front-face" src="photos\lee jong gi.jpg"  />
+      <img class="back-face" src="photos\question mark.jpg"  />
+    </div>
+
+    <div class="memory-card" data-framework="ember">
+      <img class="front-face" src="photos\lee jong gi.jpg" />
+      <img class="back-face" src="photos\question mark.jpg"  />
+    </div>
+    <div class="memory-card" data-framework="ember">
+      <img class="front-face" src="photos\lee jong gi.jpg"  />
+      <img class="back-face" src="photos\question mark.jpg" />
+    </div>
+
+    <div class="memory-card" data-framework="backbone">
+      <img class="front-face" src="photos\bae suzy.jpg"  />
+      <img class="back-face" src="photos\question mark.jpg"  />
+    </div>
+    <div class="memory-card" data-framework="backbone">
+      <img class="front-face" src="photos\Cha Eun Wo.jpg" />
+      <img class="back-face" src="photos\question mark.jpg"  />
+    </div>
+
+    <div class="memory-card" data-framework="react">
+      <img class="front-face" src="photos\Cha Eun Wo.jpg" />
+      <img class="back-face" src="photos\question mark.jpg"  />
+    </div>
+    <div class="memory-card" data-framework="react">
+      <img class="front-face" src="photos\bae suzy.jpg"  />
+      <img class="back-face" src="photos\question mark.jpg"  />
+    </div>
+  </section>
+
+  <script src="script.js"></script>
+</body>
 </html>
