--- a/toviewprojects.html
+++ b/toviewprojects.html
@@ -17,6 +17,8 @@
             <li><a  href="Day 7 and 8/first.html">Day 7 & 8</a></li>
               <li><a  href="Day 8 100 Days Css Challenge/index.html">100 Days of CSS-Day 8</a></li>
             <li><a  href="Day 9/index.html">Day 9</a></li>
+            <li><a  href="Day 9/index.html">Day 9</a></li>
+            <li><a  href="Day 9/index.html">Day 9</a></li>
             <li> <a href="Devnest front page/first.html">Devnest Front Page</a></li>
         </ul>
     </body>
