--- a/toviewprojects.html
+++ b/toviewprojects.html
@@ -19,6 +19,7 @@
             <li><a  href="Day 9/index.html">Day 9</a></li>
             <li><a  href="Day 9/index.html">Day 10</a></li>
             <li><a  href="Day 11/index.html">Day 11</a></li>
+            <li><a  href="Day 14/index.html">Day 14</a></li>
              <li><a  href="Day 12 (to do list)/index.html">Day 12</a></li>
             <li> <a href="Devnest front page/first.html">Devnest Front Page</a></li>
         </ul>
