--- a/toviewprojects.html
+++ b/toviewprojects.html
@@ -22,6 +22,13 @@
              <li><a  href="Day 12 (to do list)/index.html">Day 12</a></li>
             <li><a  href="Day 14/index.html">Day 14</a></li>
             <li><a  href="Day 15/index.html">Day 15</a></li>
+            <li><a  href="Day 15/index.html">Day 16</a></li>
+            <li><a  href="Day 15/index.html">Day 17</a></li>
+            <li><a  href="Day 15/index.html">Day 18</a></li>
+            <li><a  href="Day 15/index.html">Day 19</a></li>
+            <li><a  href="Day 15/index.html">Day 20</a></li>
+            <li><a  href="Day 15/index.html">Day 21</a></li>
+            <li><a  href="Day 15/index.html">Day 22</a></li>
             
             <li> <a href="Devnest front page/first.html">Devnest Front Page</a></li>
         </ul>
